<resources>
    <string name="app_name">GAS2MOVE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main">Main</string>

    <string name="nav_map_string">Map</string>
    <string name="nav_cars_string">Cars</string>
    <string name="nav_account_string">Account</string>
    <string name="nav_settings_string">Settings</string>

    <string name="user_name">Albertito17</string>
    <string name="user_email">alberto.espada@gmail.com</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="error_invalid_email">Esta dirección de email es incorrecta</string>
    <string name="error_invalid_password">Esta contraseña es muy corta</string>
    <string name="error_incorrect_password">El email o la contraseña son incorrectos</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_forgotten">¿Has olvidado tu contraseña?</string>
    <string name="register">¿No tienes una cuenta todavía?</string>
    <string name="title_activity_forgoten_pass">ForgotenPassActivity</string>
    <string name="lostPassword">If you have lost your password yet. Introduce here your address to send you an email to give you a password to enter.</string>
    <string name="name">Alberto</string>
    <string name="lastName">Espada Marquez</string>

    <!-- Escaner codigos -->
    <string name="scan_button">Confirmar</string>
    <string name="scan_status">Escaneando...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
